# chip8-emulator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: bamboo.h  chip8.c  chip8.h  chip8.rs  input.c  input.h  input.rs  main.c  main.rs
